--- a/AlgoLoan/Web.config
+++ b/AlgoLoan/Web.config
@@ -13,12 +13,15 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AlgoLoan-20200224105927.mdf;Initial Catalog=aspnet-AlgoLoan-20200224105927;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="AlgoLoanConnStr" connectionString="data source=.;initial catalog=LoanComparer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="PayStackSec" value="sk_test_81d7bf04f56844cb273934bd6b702cf7b3d8a72c" />
   </appSettings>
   <system.web>
     <authentication mode="None"/>
