--- a/AlgoLoan/AlgoLoan.csproj
+++ b/AlgoLoan/AlgoLoan.csproj
@@ -173,6 +173,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002242225080_InitialCreate.cs" />
+    <Compile Include="Migrations\202002242225080_InitialCreate.Designer.cs">
+      <DependentUpon>202002242225080_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002242232355_AddedMoreUserDatails.cs" />
+    <Compile Include="Migrations\202002242232355_AddedMoreUserDatails.Designer.cs">
+      <DependentUpon>202002242232355_AddedMoreUserDatails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -251,6 +260,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202002242225080_InitialCreate.resx">
+      <DependentUpon>202002242225080_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002242232355_AddedMoreUserDatails.resx">
+      <DependentUpon>202002242232355_AddedMoreUserDatails.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
