--- a/AlgoLoan/Web.config
+++ b/AlgoLoan/Web.config
@@ -13,7 +13,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AlgoLoan-20200224105927.mdf;Initial Catalog=aspnet-AlgoLoan-20200224105927;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="AlgoLoanConnStr" connectionString="data source=.;initial catalog=LoanComparer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
+    <add name="AlgoLoanConnStr" connectionString="data source=.;initial catalog=AlgoLoan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
