--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -64,14 +64,14 @@
     <Compile Include="EF\UserLogin.cs" />
     <Compile Include="EF\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repo\IProviderRepository.cs" />
+    <Compile Include="Repo\ProviderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repo\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
