--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A1A4A0E-04FF-40DD-90C1-5AA2BCF6606C}</ProjectGuid>
+    <ProjectGuid>{DFED3212-4191-4B3A-9773-0BB8459B2872}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DAL</RootNamespace>
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\C__MigrationHistory.cs" />
-    <Compile Include="EF\AlgoLoanDbContext.cs" />
+    <Compile Include="EF\Model1.cs" />
     <Compile Include="EF\Provider.cs" />
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Search.cs" />
@@ -64,14 +64,14 @@
     <Compile Include="EF\UserLogin.cs" />
     <Compile Include="EF\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repo\IProviderRepository.cs" />
-    <Compile Include="Repo\ProviderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Repo\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
