--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\C__MigrationHistory.cs" />
-    <Compile Include="EF\Model1.cs" />
+    <Compile Include="EF\AlgoLoanDbContext.cs" />
     <Compile Include="EF\Provider.cs" />
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Search.cs" />
@@ -64,14 +64,20 @@
     <Compile Include="EF\UserLogin.cs" />
     <Compile Include="EF\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repo\IProviderRepository.cs" />
+    <Compile Include="Repo\ISearchRepository.cs" />
+    <Compile Include="Repo\ISubscriptionRepository.cs" />
+    <Compile Include="Repo\IVisitRepository.cs" />
+    <Compile Include="Repo\ProviderRepository.cs" />
+    <Compile Include="Repo\SearchRepository.cs" />
+    <Compile Include="Repo\SubscriptionRepository.cs" />
+    <Compile Include="Repo\VisitRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repo\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
